--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cwbabis/Portfolio#readme",
   "dependencies": {
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "material-design-icons": "^3.0.1"
   }
 }
